// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAccordion should render correctly 1`] = `
<dl
  className="bpk-accordion"
>
  Accordion child
</dl>
`;

exports[`BpkAccordion should render correctly with custom "className" prop 1`] = `
<dl
  className="bpk-accordion my-custom-class"
>
  Accordion child
</dl>
`;
